@@ -20,7 +20,7 @@ libexec_PROGRAMS = check_apt check_disk check_dummy check_http check_load \
 	urlize @EXTRAS@
 
 check_tcp_programs = check_ftp check_imap check_nntp check_pop \
-	check_udp2 check_clamd @check_tcp_ssl@
+	check_udp check_clamd @check_tcp_ssl@
 
 EXTRA_PROGRAMS = check_mysql check_radius check_pgsql check_snmp check_hpjd \
 	check_swap check_fping check_ldap check_game check_dig \
